--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,9 +7,19 @@ body {
 }
 
 .slick-prev {
-  left: 5% !important;
+  left: 0% !important;
 }
 
 .slick-next {
-  right: 5% !important;
+  right: 0% !important;
+}
+
+@media screen and (max-width: 768px) {
+  .slick-prev {
+    left: -2% !important;
+  }
+
+  .slick-next {
+    right: -2% !important;
+  }
 }
